--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -84,7 +84,7 @@
             = image_tag 'outfits/small_loading.gif'
             %span Generating&hellip;
           %img#preview-sharing-thumbnail
-        %ul
+        %ul#preview-sharing-urls
           %li
             %label{:for => 'preview-sharing-permalink-url'} Outfit page
             %input#preview-sharing-permalink-url.outfit-url{:type => 'text'}
@@ -97,6 +97,10 @@
           %li
             %label{:for => 'preview-sharing-small-image-url'} Small image
             %input#preview-sharing-small-image-url.outfit-url{:type => 'text'}
+        %ul#preview-sharing-url-formats
+          %li.active{'data-format' => 'plain'} Plain
+          %li{'data-format' => 'html'} HTML
+          %li{'data-format' => 'bbcode'} BBCode
   %form#preview-search-form
     %header
       %h2 Add an item
