--- a/app/stylesheets/outfits/_edit.sass
+++ b/app/stylesheets/outfits/_edit.sass
@@ -482,6 +482,9 @@ body.outfits-edit
     
     #preview-sharing-urls
       +sidebar-view-child
+      margin:
+        bottom: 1em
+        top: 1em
     
       li
         display: block
@@ -501,7 +504,6 @@ body.outfits-edit
       +user-select(none)
       // remove whitespace between inline-block elements
       font-size: 0
-      margin-top: 12px
       text-align: center
       
       li
@@ -513,7 +515,7 @@ body.outfits-edit
         color: $soft-text-color
         cursor: pointer
         font-size: 12px
-        padding: 0 .75em
+        padding: 0 2em
         
         &.active
           background: $module-bg-color
